english-for-kids/src/sass/base/_burger-menu.scss
.burger{
  position: relative;
  height: 30px;
  width: 35px;
}
#burger__toggle{
  opacity: 0;
  width: 35px;
  height: 35px;
  z-index: 5;
}
.burger__button{
  display: flex; 
  align-items: center; 
  position: absolute;
  width: 35px;
  cursor: pointer;
  z-index: 3;
  margin: -20px 0px;
}
.burger__button > span,
.burger__button > span::before,
.burger__button > span::after{
  display: block;
  position: absolute;
  width: 3.5em;
  height: 7px;
  transition-duration: .25s;
  background-color: $color-burger-span;
}
.burger__button > span::before{
  content: '';
  top: -10px;
}
.burger__button > span::after{
  content: '';
  top: 10px;
}
.menu{
  display: block;
  position: fixed;
  visibility: hidden;
  top: 0;
  left: -100%;
  width: 350px;
  height: 100%;
  padding: 80px;
  list-style: none;
  background-color: $color-play;
  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
  transition-duration: .25s;
  z-index: 2;
}
.menu__item{
  display: block;
  padding: 12px 24px;
  color: $color-burger-text;
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  font-weight: 600;
  text-decoration: none;
  transition-duration: .25s;
}
.menu__item:hover{
  text-decoration: underline;
}

.active{
  color: $color-burger-active;
  text-decoration: underline;
}

#burger__toggle:checked ~ .burger__button > span {
  transform: rotate(45deg);
}
#burger__toggle:checked ~ .burger__button > span::before {
  top: 0;
  transform: rotate(0);
}
#burger__toggle:checked ~ .burger__button > span::after {
  top: 0;
  transform: rotate(90deg);
}
#burger__toggle:checked ~ .menu {
  visibility: visible;
  left: 0;
}

